fixed alignment

--- a/app/assets/stylesheets/games/_games.scss
+++ b/app/assets/stylesheets/games/_games.scss
@@ -48,6 +48,7 @@ a:hover {
 }
 
 #game-show-img h1{
+  margin-top: 0px;
   margin-left: 20px;
   padding-top: 20px;
   font-size: 60px;
